--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk ConfigData.compileSdkVersion
 
     defaultConfig {
-        minSdk 26
-        targetSdk 32
+        minSdk ConfigData.minSdkVersion
+        targetSdk ConfigData.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,10 +31,11 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation(Deps.coreKtx)
+    implementation(Deps.appCompat)
+    implementation(Deps.materialDesign)
+    testImplementation(Deps.junit)
+    androidTestImplementation(Deps.androidxJunit)
+    androidTestImplementation(Deps.espresso)
+
 }
