fixed compose crash on Auth module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,17 @@ android {
 
 dependencies {
 
+    implementation project(path: ':common')
+    implementation project(path: ':design')
+
     implementation(Deps.coreKtx)
     implementation(Deps.activityCompose)
     implementation(Deps.lifecycleRuntimeKtx)
     implementation(Deps.uiCompose)
     implementation(Deps.toolingCompose)
     implementation(Deps.materialCompose)
+
+    testImplementation(Deps.junit)
+    androidTestImplementation(Deps.androidxJunit)
+    androidTestImplementation(Deps.espresso)
 }
