--- a/common/build.gradle
+++ b/common/build.gradle
@@ -31,11 +31,12 @@ android {
 
 dependencies {
 
-    implementation(Deps.coreKtx)
-    implementation(Deps.appCompat)
-    implementation(Deps.materialDesign)
-    testImplementation(Deps.junit)
-    androidTestImplementation(Deps.androidxJunit)
-    androidTestImplementation(Deps.espresso)
+    implementation(CoreDependencies.coreKtx)
+    implementation(CoreDependencies.appCompat)
+    implementation(CoreDependencies.materialDesign)
+
+    testImplementation(TestDependencies.junit)
+    androidTestImplementation(TestDependencies.androidxJunit)
+    androidTestImplementation(TestDependencies.espresso)
 
 }
