--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     kapt(HiltDependencies.hiltCompiler)
     kapt(HiltDependencies.androidCompiler)
 
+    implementation 'androidx.navigation:navigation-compose:2.5.0'
+
 }
