--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
@@ -10,7 +10,6 @@ android {
     compileSdk ConfigData.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.example.authentication"
         minSdk ConfigData.minSdkVersion
         targetSdk ConfigData.targetSdkVersion
         versionCode ConfigData.versionCode
@@ -70,6 +69,5 @@ dependencies {
     kapt(HiltDependencies.hiltCompiler)
     kapt(HiltDependencies.androidCompiler)
 
-    implementation 'androidx.navigation:navigation-compose:2.5.0'
-
+    implementation(ComposeDependencies.navigationCompose)
 }
