--- a/common/build.gradle
+++ b/common/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     androidTestImplementation(TestDependencies.androidxJunit)
     androidTestImplementation(TestDependencies.espresso)
 
+    implementation(AccompanistDependencies.navigationAnimation)
+    implementation(ComposeDependencies.navigationCompose)
+
 }
