--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation(ComposeDependencies.uiCompose)
     implementation(ComposeDependencies.toolingCompose)
     implementation(ComposeDependencies.materialCompose)
+    implementation(ComposeDependencies.navigationCompose)
 
     testImplementation(TestDependencies.junit)
     androidTestImplementation(TestDependencies.androidxJunit)
@@ -69,5 +70,12 @@ dependencies {
     kapt(HiltDependencies.hiltCompiler)
     kapt(HiltDependencies.androidCompiler)
 
-    implementation(ComposeDependencies.navigationCompose)
+    implementation(RetrofitDependencies.retrofit)
+    implementation(RetrofitDependencies.gsonConverter)
+    implementation(RetrofitDependencies.okhttp)
+    implementation(RetrofitDependencies.loggingInterceptor)
+
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
+
+
 }
