--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':feature_home'
 include ':feature_space'
 include ':feature_transaction'
 include ':feature_profile'
+include ':contact_picker'
