--- a/contact_picker/src/main/AndroidManifest.xml
+++ b/contact_picker/src/main/AndroidManifest.xml
@@ -2,10 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.contact_picker">
 
-    <application>
-        <activity
-            android:name=".ContactPickerActivity"
-            android:exported="false" />
-    </application>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
 
 </manifest>
