--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 
 android {
