--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':feature_space'
 include ':feature_transaction'
 include ':feature_profile'
 include ':contact_picker'
+include ':media_picker'
