Basic Working done for Media Picker ; Can see the images on the screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation(project(Modules.FEATURE_SPACE))
     implementation(project(Modules.FEATURE_PROFILE))
     implementation(project(Modules.LIBRARY_CONTACT_PICKER))
+    implementation(project(Modules.LIBRARY_MEDIA_PICKER))
     
     implementation(AccompanistDependencies.navigationAnimation)
 
