--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: lint.html
-          path: app/build/reports/lint-results-debug.html
+          path: app\build\reports\lint-results-debug.html
