--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Upload html test report
         uses: actions/upload-artifact@v2
         with:
-          name: lint.html
-          path: app\build\reports\lint-results-debug.html
+          name: index.html
+          path: app/build/reports/lint-results-debug.html
