--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,6 +19,14 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Build debug APK
+        run: ./gradlew assembleDebug
+
       - name: Upload Lint report - App Module
         uses: actions/upload-artifact@v2
         with:
