--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+systemProp.sonar.sources=./src/main
+systemProp.sonar.host.url=https://sonarcloud.io/
+systemProp.sonar.organization=sksaikia
+systemProp.sonar.projectKey=sksaikia_SplitYourBillsAndroid-MultiModule
+systemProp.sonar.projectName=SplitYourBillsAndroid-MultiModule
