--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,128 +11,63 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-#jobs:
-#  lint:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout the code
-#        uses: actions/checkout@v2
-#
-#      - name: set up JDK 11
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 11
-#
-#      - name: Build debug APK
-#        run: ./gradlew assembleDebug
-#
-#      - name: Upload Lint report - App Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: main_app_lint_report.html
-#          path: app/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Authentication Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: authentication_lint_report.html
-#          path: authentication/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Transaction Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: transaction_lint_report.html
-#          path: feature_transaction/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Space Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: space_lint_report.html
-#          path: feature_space/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Design Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: design_lint_report.html
-#          path: design/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Contact Picker Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: contact_picker_lint_report.html
-#          path: contact_picker/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Profile  Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: profile_lint_report.html
-#          path: feature_profile/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Common  Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: common_lint_report.html
-#          path: common/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Home Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: home_lint_report.html
-#          path: feature_home/build/reports/lint-results-debug.html
 jobs:
-#  lint:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout Code
-#        uses: actions/checkout@v2
-#      - name: Run Lint Check
-#        run: ./gradlew lint
-#      - name: Upload Lint report - App Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: main_app_lint_report.html
-#          path: app/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Authentication Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: authentication_lint_report.html
-#          path: authentication/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Transaction Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: transaction_lint_report.html
-#          path: feature_transaction/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Space Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: space_lint_report.html
-#          path: feature_space/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Design Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: design_lint_report.html
-#          path: design/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Contact Picker Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: contact_picker_lint_report.html
-#          path: contact_picker/build/reports/lint-results-debug.html
-#      - name: Upload Lint report - Profile  Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: profile_lint_report.html
-#          path: feature_profile/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Common  Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: common_lint_report.html
-#          path: common/build/reports/lint-results-debug.html
-#
-#      - name: Upload Lint report - Home Module
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: home_lint_report.html
-#          path: feature_home/build/reports/lint-results-debug.html
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Run Lint Check
+        run: ./gradlew lint
+      - name: Upload Lint report - App Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: main_app_lint_report.html
+          path: app/build/reports/lint-results-debug.html
+      - name: Upload Lint report - Authentication Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: authentication_lint_report.html
+          path: authentication/build/reports/lint-results-debug.html
+      - name: Upload Lint report - Transaction Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: transaction_lint_report.html
+          path: feature_transaction/build/reports/lint-results-debug.html
+      - name: Upload Lint report - Space Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: space_lint_report.html
+          path: feature_space/build/reports/lint-results-debug.html
+
+      - name: Upload Lint report - Design Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: design_lint_report.html
+          path: design/build/reports/lint-results-debug.html
+
+      - name: Upload Lint report - Contact Picker Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: contact_picker_lint_report.html
+          path: contact_picker/build/reports/lint-results-debug.html
+      - name: Upload Lint report - Profile  Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: profile_lint_report.html
+          path: feature_profile/build/reports/lint-results-debug.html
+
+      - name: Upload Lint report - Common  Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: common_lint_report.html
+          path: common/build/reports/lint-results-debug.html
+
+      - name: Upload Lint report - Home Module
+        uses: actions/upload-artifact@v2
+        with:
+          name: home_lint_report.html
+          path: feature_home/build/reports/lint-results-debug.html
   static-code-analysis:
     runs-on: ubuntu-latest
     steps:
@@ -148,3 +83,23 @@ jobs:
         run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  package:
+    name: Generate APK
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v2
+
+      - name: set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Build debug APK
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: split-your-bills-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
